--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^4.36.1",
     "axios": "^1.6.7",
+    "clsx": "^2.0.0",
     "date-fns": "^3.3.1",
     "next": "14.1.0",
     "nextjs-toploader": "^1.6.6",
