Simplify build for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,13 @@
 {
-  "version": 2,
-  "framework": "nextjs",
   "buildCommand": "npm run build",
-  "outputDirectory": ".next"
+  "outputDirectory": ".next",
+  "framework": "nextjs",
+  "devCommand": "npm run dev",
+  "installCommand": "npm install",
+  "github": {
+    "silent": true
+  },
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
