Revert to standalone mode for Next.js deployment

--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,7 @@
     "silent": true
   },
   "env": {
-    "NODE_ENV": "production"
+    "NODE_ENV": "production",
+    "NEXT_PUBLIC_API_URL": "https://backend-ba7f06bxx-piyush-rakesh-chaturvedis-projects.vercel.app/api"
   }
 }
