--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,15 @@
   },
   "env": {
     "NODE_ENV": "production",
-    "NEXT_PUBLIC_API_URL": "https://backend-ba7f06bxx-piyush-rakesh-chaturvedis-projects.vercel.app/api"
+    "NEXT_PUBLIC_API_URL": "https://backend-ba7f06bxx-piyush-rakesh-chaturvedis-projects.vercel.app/api",
+    "SKIP_STATIC_GENERATION": "true",
+    "NEXTJS_BUILD_TARGET": "server",
+    "NEXT_TELEMETRY_DISABLED": "1",
+    "NEXT_SHARP_PATH": "/tmp/node_modules/sharp"
+  },
+  "buildEnvironment": {
+    "SKIP_STATIC_GENERATION": "true",
+    "NEXTJS_BUILD_TARGET": "server",
+    "NEXT_TELEMETRY_DISABLED": "1"
   }
 }
